new layout of the app

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,12 @@ temp/
 hooks/
 platforms/
 plugins/
+resources/
 plugins/android.json
 plugins/ios.json
 www/
 $RECYCLE.BIN/
-
+/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
