--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-server": "2.1.1",
     "@ionic/cloud-angular": "^0.8.0",
     "@ionic/storage": "1.1.6",
+    "angular2-jwt": "^0.1.27",
     "ionic-angular": "2.0.0-rc.3",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
+    "cordova-plugin-inappbrowser",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [
