--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@ionic-native/core": "3.4.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
+    "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "2.0.1",
+    "ion-affix": "^1.0.5",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4",
-    "@ionic/cloud-angular": "^0.12.0"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.0",
