--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
+    "@auth0/cordova": "^0.2.0",
     "@ionic-native/core": "3.4.2",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "2.0.1",
+    "angular-jwt": ">= 0.1.3",
+    "auth0-js": "^8.9.3",
     "ion-affix": "^1.0.5",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
