--- a/package.json
+++ b/package.json
@@ -8,29 +8,36 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/core": "3.4.2",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",
-    "@ionic/cloud-angular": "^0.12.0",
-    "@ionic/storage": "2.0.1",
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/forms": "5.0.1",
+    "@angular/http": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-browser-dynamic": "5.0.1",
+    "@auth0/cordova": "^0.2.0",
+    "@ionic-native/core": "4.4.2",
+    "@ionic-native/spinner-dialog": "^4.4.2",
+    "@ionic-native/splash-screen": "4.4.2",
+    "@ionic-native/status-bar": "^4.4.2",
+    "@ionic/storage": "2.1.3",
+    "@types/lodash": "4.14.74",
+    "angular2-jwt": "0.2.3",
+    "auth0-js": "^8.11.3",
+    "auth0-lock": "10.16.0",
+    "cordova-ios": "4.4.0",
     "ion-affix": "^1.0.5",
-    "ionic-angular": "3.0.1",
+    "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4"
+    "lodash": "^4.17.4",
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.0",
-    "typescript": "~2.2.1"
+    "@ionic/app-scripts": "3.1.2",
+    "typescript": "2.6.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
@@ -38,7 +45,8 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-spinner-dialog"
   ],
   "cordovaPlatforms": [
     "ios",
