--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "angular2-jwt": "0.2.3",
     "auth0-js": "^8.11.3",
     "auth0-lock": "10.16.0",
-    "cordova-ios": "4.4.0",
+    "cordova-ios": "^4.5.5",
     "ion-affix": "^1.0.5",
     "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
